--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body
 {
   color: white;
-  background: rgb(128, 54, 99);
+  background: #c0d3ff;
 }
 span
 {
@@ -25,12 +25,16 @@ span
 {
   font-size:48px;
 }
-.heading{
+
+.heading
+{
   font-size: 18px;
   border-radius: 10px;
   letter-spacing: 10px;
 }
-label{
+
+label
+{
   font-size: 14px;
   color: #62b33a;
   padding: 6px;
