--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body
 {
   color: white;
-  background: #c0d3ff;
+  background: rgb(128, 54, 99);
 }
 span
 {
   font-size: 30px;
 }
-#camera , #result
+#camera, #result
 {
   border: 2px dashed black;
   width: 350px;
@@ -25,16 +25,12 @@ span
 {
   font-size:48px;
 }
-
-.heading
-{
+.heading{
   font-size: 18px;
   border-radius: 10px;
   letter-spacing: 10px;
 }
-
-label
-{
+label{
   font-size: 14px;
   color: #62b33a;
   padding: 6px;
